<resources>
    <string name="app_name">Loading Action</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>


    <!-- List of Radio Buttons Text-->
    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <!-- List of Radio Buttons URLs-->
    <string name="glide_repo_url">https://github.com/bumptech/glide</string>
    <string name="load_app_repo_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_repo_url">https://github.com/square/retrofit</string>


    <string name="no_file_selected">Please select the file to download</string>
    <string name="github_repo_channel_id" translatable="false">github_repo_channel</string>
    <string name="github_repo_channel_name" translatable="true">Repo</string>
    <string name="file_name_text">Glide - Image Loading Library by BumpTech</string>
    <string name="file_name_title">File Name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>

</resources>
